name:          hdph-closure
version:       0.2.2
synopsis:      Explicit closures in Haskell distributed parallel Haskell
description:   Explicit closures are serialisable representations of thunks.
               This package exports the fully polymorphic explicit closures
               of HdpH (Haskell distributed parallel Haskell), for use
               by HdpH or other packages.
homepage:      https://github.com/PatrickMaier/HdpH
license:       BSD3
license-file:  LICENSE
author:        Patrick Maier <C.Patrick.Maier@gmail.com>
maintainer:    Patrick Maier <C.Patrick.Maier@gmail.com>
stability:     experimental
category:      Control, Distributed Computing
tested-with:   GHC == 7.8.2
build-type:    Simple
cabal-version: >= 1.8

Flag BuildTest
  description:     Build test suite.
  default:         False
  manual:          True

Flag BuildBench
  description:     Build criterion-based benchmark suite.
  default:         False
  manual:          True

Library
  exposed-modules: Control.Parallel.HdpH.Closure
  other-modules:   Control.Parallel.HdpH.Closure.Internal,
                   Control.Parallel.HdpH.Closure.Static,
                   Control.Parallel.HdpH.Closure.Static.State,
                   Control.Parallel.HdpH.Closure.Static.Type
  build-depends:   template-haskell,
                   array >= 0.1 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2
  hs-source-dirs:  src
  ghc-options:     -Wall

Executable overhead
  main-is:         overhead.hs
  if flag(BuildTest)
    build-depends: template-haskell,
                   array >= 0.1 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   time >= 1.2 && < 2
  else
    buildable:     False
  hs-source-dirs:  src, test
  ghc-options:     -Wall -rtsopts -O0

Executable nested
  main-is:         nested.hs
  if flag(BuildTest)
    build-depends: template-haskell,
                   array >= 0.1 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   time >= 1.2 && < 2
  else
    buildable:     False
  hs-source-dirs:  src, test
  ghc-options:     -Wall -rtsopts -O0

Executable toClosure
  main-is:         toClosure.hs
  if flag(BuildTest)
    build-depends: template-haskell,
                   array >= 0.1 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   time >= 1.2 && < 2
  else
    buildable:     False
  hs-source-dirs:  src, test
  ghc-options:     -Wall -rtsopts -O0

Executable toClosureBench
  main-is:         toClosureBench.hs
  if flag(BuildBench)
    build-depends: template-haskell,
                   array >= 0.1 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   time >= 1.2 && < 2,
                   criterion >= 1.1 && < 2
  else
    buildable:     False
  hs-source-dirs:  src, bench
  ghc-options:     -Wall -O2
