name:          hdph-mpi-allgather
version:       0.0.2
synopsis:      MPI Allgather for Haskell Distributed Parallel Haskell
description:   MPI-based Allgather for startup phase of HdpH runtime.
               This package exports Haskell bindings to Allgather operations;
               it must be linked with the appropriate MPI libraries.
homepage:      https://github.com/PatrickMaier/HdpH
license:       BSD3
license-file:  LICENSE
author:        Patrick Maier <C.Patrick.Maier@gmail.com>
maintainer:    Patrick Maier <C.Patrick.Maier@gmail.com>
stability:     experimental
category:      Control, Distributed Computing
tested-with:   GHC == 7.6.3
build-type:    Simple
cabal-version: >= 1.8

Flag BuildTest
  description:     Build test suite.
  default:         False
  manual:          True

Flag LibOpenMPI
  description:     Link with OpenMPI library; excludes other Lib* flags.
  default:         False
  manual:          True

Flag LibMPICH2
  description:     Link with MPICH2 library; excludes other Lib* flags.
  default:         False
  manual:          True

Flag LibMPICHCray
  description:     Link with Cray's own MPICH lib; excludes other Lib* flags.
  default:         False
  manual:          True

Library
  exposed-modules: Control.Parallel.HdpH.MPI.Allgather
  c-sources:       cbits/mpi_wrapper.c
  if flag(LibOpenMPI)   { extra-libraries: mpi } else {
  if flag(LibMPICH2)    { extra-libraries: mpich, mpl } else {
  if flag(LibMPICHCray) { extra-libraries: mpich_cray } } }
  build-depends:   base >= 4 && < 5,
                   bytestring == 0.10.*
  hs-source-dirs:  src
  extensions:      ForeignFunctionInterface
  ghc-options:     -Wall

Executable TestAllgather
  main-is:         TestAllgather.hs
  c-sources:       cbits/mpi_wrapper.c
  if flag(LibOpenMPI)   { extra-libraries: mpi } else {
  if flag(LibMPICH2)    { extra-libraries: mpich, mpl } else {
  if flag(LibMPICHCray) { extra-libraries: mpich_cray } } }
  if flag(BuildTest)
    build-depends: base >= 4 && < 5,
                   bytestring == 0.10.*,
                   cereal >= 0.3.3 && < 0.4,
                   network == 2.4.*,
                   random >= 1 && < 2,
                   unix >= 2.6 && < 2.7
  else
    buildable: False
  hs-source-dirs:  src, test
  ghc-options:     -Wall -threaded -rtsopts
