name:          hdph
version:       0.2.3
synopsis:      Haskell distributed parallel Haskell
description:   Haskell distributed parallel Haskell (HdpH) is a Haskell DSL
               for distributed-memory parallelism, implemented entirely in
               Haskell (as supported by GHC).
homepage:      https://github.com/PatrickMaier/HdpH
license:       BSD3
license-file:  LICENSE
author:        Patrick Maier <C.Patrick.Maier@gmail.com>,
               Rob Stewart <robstewart57@gmail.com>
maintainer:    Patrick Maier <C.Patrick.Maier@gmail.com>
stability:     experimental
category:      Control, Parallelism, Distributed Computing, Monads
tested-with:   GHC == 7.6.3 || == 7.8.2
build-type:    Simple
cabal-version: >= 1.8

Flag WithMPI
  description:     Use MPI startup instead of UDP startup.
  default:         False
  manual:          True

Library
  exposed-modules: Control.Parallel.HdpH,
                   Control.Parallel.HdpH.Conf,
                   Control.Parallel.HdpH.Dist,
                   Control.Parallel.HdpH.Strategies
  other-modules:   Control.Parallel.HdpH.Internal.Comm,
                   Control.Parallel.HdpH.Internal.Data.CacheMap.Strict,
                   Control.Parallel.HdpH.Internal.Data.Deque,
                   Control.Parallel.HdpH.Internal.Data.DistMap,
                   Control.Parallel.HdpH.Internal.Data.Sem,
                   Control.Parallel.HdpH.Internal.GRef,
                   Control.Parallel.HdpH.Internal.IVar,
                   Control.Parallel.HdpH.Internal.Location,
                   Control.Parallel.HdpH.Internal.Misc,
                   Control.Parallel.HdpH.Internal.Scheduler,
                   Control.Parallel.HdpH.Internal.Sparkpool,
                   Control.Parallel.HdpH.Internal.State.Comm,
                   Control.Parallel.HdpH.Internal.State.GRef,
                   Control.Parallel.HdpH.Internal.State.Location,
                   Control.Parallel.HdpH.Internal.Threadpool,
                   Control.Parallel.HdpH.Internal.Topology,
                   Control.Parallel.HdpH.Internal.Type.Comm,
                   Control.Parallel.HdpH.Internal.Type.GRef,
                   Control.Parallel.HdpH.Internal.Type.Location,
                   Control.Parallel.HdpH.Internal.Type.Par
  build-depends:   template-haskell,
                   array >= 0.4 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   hashable >= 1.2.1 && < 2,
                   mtl >= 2 && < 3,
                   network >= 2.4 && < 2.7,
                   network-info == 0.2.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   unix >= 2.6 && < 2.8,
                   unordered-containers >= 0.1 && < 1,
                   hdph-closure >= 0.2.0 && < 0.3
  hs-source-dirs:  src
  ghc-options:     -Wall
  if flag(WithMPI)
    other-modules:   Control.Parallel.HdpH.Internal.CommStartupMPI
    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
    cpp-options:     -DSTARTUP_MPI
  else
    other-modules:   Control.Parallel.HdpH.Internal.CommStartupUDP
    build-depends:   network-multicast >= 0.0.7 && < 0.1
    cpp-options:     -DSTARTUP_UDP

Executable hello
  main-is:         Test/HdpH/hello.hs
  build-depends:   template-haskell,
                   array >= 0.4 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   hashable >= 1.2.1 && < 2,
                   mtl >= 2 && < 3,
                   network >= 2.4 && < 2.7,
                   network-info == 0.2.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   unix >= 2.6 && < 2.8,
                   unordered-containers >= 0.1 && < 1,
                   hdph-closure >= 0.2.0 && < 0.3
  hs-source-dirs:  src
  ghc-options:     -Wall -threaded -rtsopts
  if flag(WithMPI)
    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
    cpp-options:     -DSTARTUP_MPI
  else
    build-depends:   network-multicast >= 0.0.7 && < 0.1
    cpp-options:     -DSTARTUP_UDP

Executable dist
  main-is:         Test/HdpH/dist.hs
  build-depends:   template-haskell,
                   array >= 0.4 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   hashable >= 1.2.1 && < 2,
                   mtl >= 2 && < 3,
                   network >= 2.4 && < 2.7,
                   network-info == 0.2.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   unix >= 2.6 && < 2.8,
                   unordered-containers >= 0.1 && < 1,
                   hdph-closure >= 0.2.0 && < 0.3
  hs-source-dirs:  src
  ghc-options:     -Wall -threaded -rtsopts
  if flag(WithMPI)
    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
    cpp-options:     -DSTARTUP_MPI
  else
    build-depends:   network-multicast >= 0.0.7 && < 0.1
    cpp-options:     -DSTARTUP_UDP

Executable fib
  main-is:         Test/HdpH/fib.hs
  build-depends:   template-haskell,
                   array >= 0.4 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   hashable >= 1.2.1 && < 2,
                   mtl >= 2 && < 3,
                   network >= 2.4 && < 2.7,
                   network-info == 0.2.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   unix >= 2.6 && < 2.8,
                   unordered-containers >= 0.1 && < 1,
                   hdph-closure >= 0.2.0 && < 0.3
  hs-source-dirs:  src
  ghc-options:     -Wall -threaded -rtsopts
  if flag(WithMPI)
    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
    cpp-options:     -DSTARTUP_MPI
  else
    build-depends:   network-multicast >= 0.0.7 && < 0.1
    cpp-options:     -DSTARTUP_UDP

Executable sumeuler
  main-is:         Test/HdpH/sumeuler.hs
  build-depends:   template-haskell,
                   array >= 0.4 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   hashable >= 1.2.1 && < 2,
                   mtl >= 2 && < 3,
                   network >= 2.4 && < 2.7,
                   network-info == 0.2.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   unix >= 2.6 && < 2.8,
                   unordered-containers >= 0.1 && < 1,
                   hdph-closure >= 0.2.0 && < 0.3
  hs-source-dirs:  src
  ghc-options:     -Wall -threaded -rtsopts
  if flag(WithMPI)
    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
    cpp-options:     -DSTARTUP_MPI
  else
    build-depends:   network-multicast >= 0.0.7 && < 0.1
    cpp-options:     -DSTARTUP_UDP

Executable sumeuler-2level
  main-is:         Test/HdpH/sumeuler-2level.hs
  build-depends:   template-haskell,
                   array >= 0.4 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   hashable >= 1.2.1 && < 2,
                   mtl >= 2 && < 3,
                   network >= 2.4 && < 2.7,
                   network-info == 0.2.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   unix >= 2.6 && < 2.8,
                   unordered-containers >= 0.1 && < 1,
                   hdph-closure >= 0.2.0 && < 0.3
  hs-source-dirs:  src
  ghc-options:     -Wall -threaded -rtsopts
  if flag(WithMPI)
    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
    cpp-options:     -DSTARTUP_MPI
  else
    build-depends:   network-multicast >= 0.0.7 && < 0.1
    cpp-options:     -DSTARTUP_UDP

Executable queens
  main-is:         Test/HdpH/queens.hs
  build-depends:   template-haskell,
                   array >= 0.4 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   hashable >= 1.2.1 && < 2,
                   mtl >= 2 && < 3,
                   network >= 2.4 && < 2.7,
                   network-info == 0.2.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   unix >= 2.6 && < 2.8,
                   unordered-containers >= 0.1 && < 1,
                   hdph-closure >= 0.2.0 && < 0.3
  hs-source-dirs:  src
  ghc-options:     -Wall -threaded -rtsopts
  if flag(WithMPI)
    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
    cpp-options:     -DSTARTUP_MPI
  else
    build-depends:   network-multicast >= 0.0.7 && < 0.1
    cpp-options:     -DSTARTUP_UDP

Executable nbody
  main-is:         Test/HdpH/nbody.hs
  build-depends:   template-haskell,
                   array >= 0.4 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   hashable >= 1.2.1 && < 2,
                   mtl >= 2 && < 3,
                   network >= 2.4 && < 2.7,
                   network-info == 0.2.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   unix >= 2.6 && < 2.8,
                   unordered-containers >= 0.1 && < 1,
                   hdph-closure >= 0.2.0 && < 0.3
  hs-source-dirs:  src
  ghc-options:     -Wall -threaded -rtsopts
  if flag(WithMPI)
    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
    cpp-options:     -DSTARTUP_MPI
  else
    build-depends:   network-multicast >= 0.0.7 && < 0.1
    cpp-options:     -DSTARTUP_UDP

Executable matmult
  main-is:         Test/HdpH/matmult.hs
  build-depends:   template-haskell,
                   array >= 0.4 && < 0.6,
                   base >= 4 && < 5,
                   cereal == 0.4.*,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   hashable >= 1.2.1 && < 2,
                   mtl >= 2 && < 3,
                   network >= 2.4 && < 2.7,
                   network-info == 0.2.*,
                   network-transport == 0.4.*,
                   network-transport-tcp == 0.4.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   unix >= 2.6 && < 2.8,
                   unordered-containers >= 0.1 && < 1,
                   hdph-closure >= 0.2.0 && < 0.3
  hs-source-dirs:  src
  ghc-options:     -Wall -threaded -rtsopts
  if flag(WithMPI)
    build-depends:   hdph-mpi-allgather >= 0.0.1 && < 0.1
    cpp-options:     -DSTARTUP_MPI
  else
    build-depends:   network-multicast >= 0.0.7 && < 0.1
    cpp-options:     -DSTARTUP_UDP
