name:          hdph
version:       0.0.1
synopsis:      Haskell distributed parallel Haskell
description:   Haskell distributed parallel Haskell (HdpH) is a Haskell DSL
               for distributed-memory parallelism, implemented entirely in
               Haskell (as supported by GHC).
homepage:      https://github.com/PatrickMaier/HdpH
license:       BSD3
license-file:  LICENSE
author:        Patrick Maier <C.Patrick.Maier@gmail.com>,
               Rob Stewart <robstewart57@gmail.com>
maintainer:    Patrick Maier <C.Patrick.Maier@gmail.com>
stability:     experimental
category:      Control, Parallelism, Distributed Computing, Monads
tested-with:   GHC == 7.4.1 || == 7.6.2
build-type:    Simple
cabal-version: >= 1.8

Library
  exposed-modules: Control.Parallel.HdpH,
                   Control.Parallel.HdpH.Conf,
                   Control.Parallel.HdpH.Strategies
  other-modules:   Control.Parallel.HdpH.Internal.Comm,
                   Control.Parallel.HdpH.Internal.Data.Deque,
                   Control.Parallel.HdpH.Internal.Data.Sem,
                   Control.Parallel.HdpH.Internal.GRef,
                   Control.Parallel.HdpH.Internal.IVar,
                   Control.Parallel.HdpH.Internal.Location,
                   Control.Parallel.HdpH.Internal.Misc,
                   Control.Parallel.HdpH.Internal.Scheduler,
                   Control.Parallel.HdpH.Internal.Sparkpool,
                   Control.Parallel.HdpH.Internal.State.GRef,
                   Control.Parallel.HdpH.Internal.State.Location,
                   Control.Parallel.HdpH.Internal.Threadpool,
                   Control.Parallel.HdpH.Internal.Type.GRef,
                   Control.Parallel.HdpH.Internal.Type.Location,
                   Control.Parallel.HdpH.Internal.Type.Par
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   cereal >= 0.3.3 && < 0.4,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src
  ghc-options:     

Executable hello
  main-is:         Test/HdpH/hello.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   cereal >= 0.3.3 && < 0.4,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src
  ghc-options:     -threaded

Executable fib
  main-is:         Test/HdpH/fib.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   cereal >= 0.3.3 && < 0.4,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src
  ghc-options:     -threaded

Executable sumeuler
  main-is:         Test/HdpH/sumeuler.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   cereal >= 0.3.3 && < 0.4,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src
  ghc-options:     -threaded

Executable nbody
  main-is:         Test/HdpH/nbody.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   cereal >= 0.3.3 && < 0.4,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src
  ghc-options:     -threaded
